Fix spacing on menubar

--- a/src/components/menu-bar/MenuBar.css
+++ b/src/components/menu-bar/MenuBar.css
@@ -1,5 +1,6 @@
 .menuBar {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -10,4 +11,8 @@
 
 .menuFilters * {
   margin-right: 4px;
+}
+
+.menuSort {
+  margin-right: 16px;
 }
